[gd_scene load_steps=10 format=2]

[ext_resource path="res://MainScene.gd" type="Script" id=1]
[ext_resource path="res://aerial_rocks_02_diff_4k.jpg" type="Texture" id=2]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment3D" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 50, 0.25, 50 )

[sub_resource type="PlaneMesh" id=4]
size = Vector2( 100, 100 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 2 )

[sub_resource type="CapsuleShape" id=6]
radius = 0.25

[sub_resource type="CapsuleMesh" id=7]
radius = 0.25

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="WorldEnvironment3D" type="WorldEnvironment3D" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.942496, -0.163932, -0.291253, 0.331754, 0.35325, 0.874731, -0.0405109, -0.921054, 0.387322, 0, 29.9334, 0 )
shadow_enabled = true

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.03388, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.235271, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="SessionTypeLbl" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "None"
align = 1

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.0
margin_top = -7.0
margin_right = 112.0
margin_bottom = 13.0
rect_pivot_offset = Vector2( 0.5, 0.5 )

[node name="ServerButton" type="Button" parent="Menu/HBoxContainer"]
margin_right = 103.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 1, 0.262745, 1 )
text = "Start as Server"

[node name="VSeparator" type="VSeparator" parent="Menu/HBoxContainer"]
margin_left = 107.0
margin_right = 111.0
margin_bottom = 20.0

[node name="ClientButton" type="Button" parent="Menu/HBoxContainer"]
margin_left = 115.0
margin_right = 215.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0.988235, 1, 1 )
text = "Start as Client"

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.707107, 0.353553, -0.612372, 0, 0.866025, 0.5, 0.707107, 0.353553, -0.612372, -71.053, 66.4778, -71.053 )
projection = 1
size = 50.0
far = 2000.0

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.772334, 2.46257 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 7 )

[connection signal="pressed" from="Menu/HBoxContainer/ServerButton" to="." method="_start_server"]
[connection signal="pressed" from="Menu/HBoxContainer/ClientButton" to="." method="_start_client"]
